--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <header>
     <h1>Welcome to Goshen Foundation</h1>
-    <p>Connect, Grow, and Serve with Us</p>
+    <p>Aspiring young talent</p>
   </header>
 
   <main>
@@ -109,4 +109,5 @@
   </script>
 </body>
 </html>
+
 
