--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <main>
     <section>
       <h2>Our Mission</h2>
-      <p>Goshen Foundation is a bold, faith-driven initiative founded by Jonathan Mudenyo in Webuye, Kenya. We exist to empower unprivileged children through football, education, and spiritual mentorship. Our mission is to create a safe place — a modern-day Goshen — where children can thrive, dream, and grow into leaders.</p>
+      <p>Goshen Foundation is a bold, faith-driven initiative founded by Victor Mudenyo in Webuye, Kenya. We exist to empower unprivileged children through football, education, and spiritual mentorship. Our mission is to create a safe place — a modern-day Goshen — where children can thrive, dream, and grow into leaders.</p>
     </section>
 
     <section>
@@ -103,11 +103,30 @@
   <footer>
     © <span id="year"></span> Goshen Foundation — Aspiring Young Talent
   </footer>
-
-  <script>
+  
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <section id="connect">
+  <h2>Connect with Goshen</h2>
+  <p>If you'd like to support, volunteer, or reach out — we're here for it. Use the contact details below to get in touch.</p>
+
+  <h3>Contact</h3>
+  <p>Email: <a href="mailto:vijm191@gmail.com">vijm191@gmail.com</a></p>
+  <p>Phone: <a href="tel:+254712527349">0712 527 349</a></p>
+  <p>Location: Racecourse Ward, Uasin Gishu County, Kenya</p>
+
+  <h3>Donate</h3>
+  <p>Your support helps us buy equipment, build facilities, and sponsor children.</p>
+  <a class="btn" href="https://www.paypal.com/donate" target="_blank">Donate via PayPal</a>
+  <p>Or send via M‑Pesa: <strong>0712 527 349</strong></p>
+
+  <h3>Volunteer</h3>
+  <p>Want to coach, mentor, or help organize events? We'd love to hear from you.</p>
+  <a class="btn" href="mailto:vijm191@gmail.com?subject=Volunteer%20for%20Goshen">Volunteer by Email</a>
+</section>
+  <script>
 </body>
 </html>
+
 
 
